--- a/README.org
+++ b/README.org
@@ -1,8 +1,8 @@
 * Webpaste.el
 ** TODO Providers to implement [0/3]
- - [ ] Spacepaste :: paste.pound-python.org
  - [ ] dpaste.de
+ - [ ] Spacepaste :: paste.pound-python.org
  - [ ] Debian Paste :: paste.debian.net
 
-** TODO Fallback on failure [0/1]
- - [ ] Support trying the next provider on failure
+** DONE Fallback on failure [1/1]
+ - [X] Support trying the next provider on failure
