Added ptpb.pw as new and default provider
It's very much like ix.io in feature set, but it also got https
support so it's now the new default provider.

--- a/README.org
+++ b/README.org
@@ -20,7 +20,8 @@ easiest way to install and configure packages.
            ("C-c C-p C-r" . webpaste-paste-region)))
 #+END_SRC
 
-** TODO Providers to implement [4/7]
+** TODO Providers to implement [5/8]
+ - [X] ptpb.pw
  - [X] ix.io
  - [X] dpaste.com
  - [X] sprunge.us
