Added more details for contributing

--- a/CONTRIBUTING.org
+++ b/CONTRIBUTING.org
@@ -28,9 +28,11 @@ After that you do the settings you need to reproduce it (like providers and
 other stuff).
 
 ** Contributing code
+*** Code style
 Never leave trailing spaces on a line in any file. And end all files with
 exactly one newline. Not more or less than that.
 
+*** Flycheck
 Plase run [[http://www.flycheck.org/][flycheck]] with [[https://github.com/purcell/flycheck-package][flycheck-package]] in your editor to get hints and
 highlights of errors. Only one error is allowed in each file.
 
@@ -49,3 +51,8 @@ And for the tests it's okay with another error which is:
 Cannot open load file: No such file or directory, webpaste
 #+end_src
 This is due to the same reasons as above.
+
+*** Tests
+Make sure the tests works, for regular unit tests. Just run =make unit=. If
+you have changed something that might affect providers functionallity or just
+want to make sure all the providers works, you can run =make integration=.
