--- a/README.org
+++ b/README.org
@@ -101,6 +101,22 @@ Example:
 Can also be put in the =:config= section of =use-package= the same way as the
 provider definitions above.
 
+**** Use a custom hook
+You can define a custom hook to send your URL's to when returning them from
+the paste provider. This is just like regular hooks for major modes etc. You
+can have several hooks as well if you want it to do several custom things.
+
+#+begin_src emacs-lisp
+  ;; Simple hook to just message the URL, this is more or less the default
+  ;; already. But if you disable the default and still want a message, this
+  ;; would work fine.
+  (add-hook 'webpaste-return-url-hook 'message)
+
+  ;; To build your own send-to-browser hook, you could do like this:
+  (add-hook 'webpaste-return-url-hook
+            (lambda (url) (browse-url-generic url)))
+#+end_src
+
 ** TODO Providers to implement [7/10]
  - [X] ptpb.pw
  - [X] ix.io
