--- a/CONTRIBUTING.org
+++ b/CONTRIBUTING.org
@@ -43,7 +43,7 @@ If you do changes to comments anywhere, run =M-x checkdoc= in that buffer to
 check the documentation style guidelines.
 
 *** Flycheck
-Plase run [[http://www.flycheck.org/][flycheck]] with [[https://github.com/purcell/flycheck-package][flycheck-package]] in your editor to get hints and
+Please run [[http://www.flycheck.org/][flycheck]] with [[https://github.com/purcell/flycheck-package][flycheck-package]] in your editor to get hints and
 highlights of errors. Only one error is allowed in each file.
 
 In webpaste.el this allowed error is:
@@ -64,5 +64,5 @@ This is due to the same reasons as above.
 
 *** Tests
 Make sure the tests works, for regular unit tests. Just run =make unit=. If
-you have changed something that might affect providers functionallity or just
+you have changed something that might affect providers functionality or just
 want to make sure all the providers works, you can run =make integration=.
