--- a/README.org
+++ b/README.org
@@ -18,6 +18,7 @@ over time and preferred services can easily be configured.
    - [[#choosing-providers--provider-priority][Choosing providers / provider priority]]
    - [[#only-paste-plaintext-pastes][Only paste plaintext pastes]]
    - [[#confirm-pasting-with-a-yesno-confirmation-before-pasting][Confirm pasting with a yes/no confirmation before pasting]]
+   - [[#max-retries-on-failure][Max retries on failure]]
    - [[#view-recently-created-pastes][View recently created pastes]]
      - [[#send-the-returned-url-to-the-killring][Send the returned URL to the killring]]
      - [[#copy-url-to-the-clipboard][Copy URL to the clipboard]]
@@ -96,6 +97,17 @@ Example:
 
 Can also be put in the =:config= section of =use-package= the same way as the
 provider definitions above.
+
+** Max retries on failure
+To prevent infinite loops of retries there's an option named
+=webpaste-max-retries=, it's default value is =10=. Webpaste shouldn't try
+more than 10 times against remote services.
+
+This can be changed:
+#+begin_src emacs-lisp
+  ;; Do maximum 13 retries instead of standard 10
+  (setq webpaste-max-retries 13)
+#+end_src
 
 ** View recently created pastes
 Webpaste gives you several options to view your successful paste.
