wepaste: Add provider paste.rs
This fixes #50

--- a/README.org
+++ b/README.org
@@ -188,10 +188,11 @@ webpaste first and then just read the documentation by running this:
   (describe-function 'webpaste--provider)
 #+end_src
 
-* TODO Providers to implement [6/13]
+* TODO Providers to implement [7/14]
  - [ ] clbin.com
  - [ ] 0x0.st
  - [X] ix.io
+ - [X] paste.rs
  - [X] dpaste.com
  - [X] dpaste.org
  - [X] gist.github.com
